@@ -162,7 +162,7 @@ namespace triagens {
 /// @brief insert the applier action into an action list
 ////////////////////////////////////////////////////////////////////////////////
 
-        void insertClient ();
+        void insertClient (TRI_voc_tick_t);
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief determine chunk size from request
@@ -280,6 +280,12 @@ namespace triagens {
 ////////////////////////////////////////////////////////////////////////////////
   
         static const uint64_t minChunkSize;
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief maximum chunk size
+////////////////////////////////////////////////////////////////////////////////
+
+        static const uint64_t maxChunkSize;
 
      };
   }
